--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,10 @@ html {
 .bg-my {
     background-image: linear-gradient(90deg, #5e6397 0%, #0a0712 40%)
 }
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1100px;
+    text-align: center;
+}
