--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,19 @@ html {
     width: 1100px;
     text-align: center;
 }
+
+.panel {
+    transition: opacity 0.25s ease-in-out;
+    margin-bottom: 0;
+    position: relative
+    padding: 3.5em 2.5em 2.5em 2.5em;
+    width: 100%;
+}
+
+.panel.intro {
+    padding: 0;
+    height: 20em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
