--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html {
 .panel {
     transition: opacity 0.25s ease-in-out;
     margin-bottom: 0;
-    position: relative
+    position: relative;
     padding: 3.5em 2.5em 2.5em 2.5em;
     width: 100%;
 }
