--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,14 @@ html {
     background-image: linear-gradient(90deg, #5e6397 0%, #0a0712 40%)
 }
 
+/*
 .container {
     margin-left: auto;
     margin-right: auto;
     width: 1100px;
     text-align: center;
 }
+*/
 
 .panel {
     transition: opacity 0.25s ease-in-out;
@@ -36,4 +38,9 @@ html {
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.pic img {
+    width: 100%;
+    height: 100%;
 }
