--- a/css/style.css
+++ b/css/style.css
@@ -42,5 +42,17 @@ html {
 
 .pic img {
     width: 100%;
-    height: 100%;
+}
+
+#home header {
+    text-align: left;
+    min-width: 250px;
+}
+
+#home a {
+    width: 100%;
+}
+
+#home img {
+    width: 100%;
 }
