--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,12 @@ html {
     background-image: linear-gradient(90deg, #5e6397 0%, #0a0712 40%)
 }
 
-/*
 .container {
     margin-left: auto;
     margin-right: auto;
     width: 1100px;
     text-align: center;
 }
-*/
 
 .panel {
     transition: opacity 0.25s ease-in-out;
@@ -51,7 +49,7 @@ html {
 }
 
 #home a {
-    width: 100%;
+    width: 500px;
 }
 
 #home img {
