--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ html {
     margin-right: auto;
     width: 1100px;
     text-align: center;
+    background-color: white;
+    opacity: 0.2;
 }
 
 .panel {
