--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 1100px;
+    /* width: 1100px; */
     text-align: center;
     background-color: white;
     opacity: 0.2;
