--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,16 @@ html {
 }
 
 .container {
+/*
     margin-left: auto;
     margin-right: auto;
-    /* width: 1100px; */
+    width: 1100px;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.4);
+*/
 }
 
+/*
 .panel {
     transition: opacity 0.25s ease-in-out;
     margin-bottom: 0;
@@ -56,7 +59,7 @@ html {
 #home img {
     width: 100%;
 }
-
+*/
 
 
 
