--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-html { 
+body { 
     background: url('../images/obrazki_n_214076_galaktyka-andromeda-kosmos.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
