--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,16 @@ body {
 .bg-my {
     background-image: linear-gradient(90deg, #5e6397 0%, #0a0712 40%)
 }
+
+.wrapper {
+    padding: 3em 0;
+    min-width: calc(100% - 6em);
+    width: 45em;
+    margin: 0 auto;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 1s ease-in-out;
+}
