--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
     min-width: calc(100% - 6em);
     width: 45em;
     margin: 0 auto;
-    min-height: 100vh;
+    min-height: calc(100vh - 65px);
     display: flex;
     flex-direction: column;
     align-items: center;
