--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body { 
-    background: url('../images/obrazki_n_214076_galaktyka-andromeda-kosmos.jpg') no-repeat center center fixed; 
+    background: url('../images/obrazki_n_214076_galaktyka-andromeda-kosmos.jpg') no-repeat center left fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
