--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,11 @@ body {
 .intro {
     height: 20em;
 }
+
+.intro header {
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 3.5em 2.5em;
+    margin-bottom: 0;
+    width: 100%;
+}
