--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
     min-height: calc(100vh - 65px);
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     transition: opacity 1s ease-in-out;
