--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ body {
     -o-background-size: cover;
     background-size: cover;
     font-size: 14pt;
+/*
     font-family: sans-serif;
+*/
     font-weight: 300;
     line-height: 1.75em;
 }
