--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     background-image: linear-gradient(90deg, #5e6397 0%, #0a0712 40%)
 }
 
-.wrapper {
+.container {
     padding: 3em 0;
     min-width: calc(100% - 6em);
     width: 45em;
