--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@ body {
 }
 
 .pic img {
-    animation: hunt 60s linear infinite;
     height: 100%;
+}
+
+.hunt {
+    animation: hunt 60s linear infinite;
 }
