--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,9 @@ body {
 }
 
 .hunt {
-    background: url("images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg") repeat-x;
+    background: url("../images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg") repeat-x;
     animation: hunt 60s linear infinite;
     background-size: contain;
+    width: 17em;
+    height: 100%;
 }
