--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
 .hunt {
     background: url("../images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg") repeat-x;
     animation: hunt 60s linear infinite;
-    background-size: contain;
+    background-size: cover;
     width: 17em;
     height: 100%;
 }
