--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ body {
     height: 100%;
 }
 
+/*
 .hunt {
     background: url("../images/obrazki_n_257282_smierc-dziecko-rowerki-pasy-droga.jpg") repeat-x;
     animation: hunt 60s linear infinite;
@@ -85,4 +86,4 @@ body {
       left: -1500px;
     }
   }
-  
+*/  
